--- a/index.html
+++ b/index.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, initial-scale=2.0">
-    <link rel="stylesheet" href="game.css">
-    <script src="phaser.min.js"></script>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+ 
+	<title>SpaceType Shoot demo</title>
+ 
+    <link rel="stylesheet" href="static/css/reset.css"/>
+	<link rel="stylesheet" href="static/css/screen.css"/>
+ 
+    <script src="static/js/libs/phaser.js"></script>
 
-    <title>¡Juego con Phaser!</title>
 </head>
-
 <body>
-    <h1>Juego con Phaser</h1>
-    <script type="module">
-        import Game from './game.js';
 
-        var config = {
-            type: Phaser.AUTO,
-            width: 1400,
-            height: 800,
-            pixelArt: true,
-            input: {
-                gamepad: true
-            },
-            scale: {
-                mode: Phaser.Scale.FIT,
-                autoCenter: Phaser.Scale.CENTER_BOTH
-            },
-            scene: [ Game ],
-            physics: { default: 'arcade', arcade: { gravity: { y: 400 }, debug: false } }
-        };
-        new Phaser.Game(config);
-    </script>
+<div id="container"></div>
+
+<script src="static/js/main.js"></script>
+
 </body>
-
 </html>
+
