--- a/src/phasertemplate-master/index.html
+++ b/src/phasertemplate-master/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="shiba_front.png.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <link rel="stylesheet" href="game.css">
     <script src="phaser.min.js"></script>
@@ -14,7 +14,7 @@
 <body>
     <h1>Juego con Phaser</h1>
     <script type="module">
-        import Game from './game.js';
+        import Game from '.game.js'; //antes era ./game.js
 
         var config = {
             type: Phaser.AUTO,
