--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="shiba_front.png.png" type="image/png" />
+    <link rel="shortcut icon" href="shiba_front.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <link rel="stylesheet" href="game.css">
     <script src="phaser.min.js"></script>
 
-    <title>¡Juego con Phaser!</title>
+    <title>Tibu-run</title>
 </head>
 
 <body>
-    <h1>Juego con Phaser</h1>
+    <h1>Game attempt</h1>
     <script type="module">
-        import Game from '.game.js'; //antes era ./game.js
+        import Game from '/game.js'; //antes era ./game.js
 
         var config = {
             type: Phaser.AUTO,
@@ -29,7 +29,7 @@
                 autoCenter: Phaser.Scale.CENTER_BOTH
             },
             scene: [ Game ],
-            physics: { default: 'arcade', arcade: { gravity: { y: 400 }, debug: false } }
+            physics: { default: 'arcade', arcade: { gravity: { y: 0 }, debug: false } }
         };
         new Phaser.Game(config);
     </script>
