--- a/game.html
+++ b/game.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="shiba_front.png" type="image/png" />
+    <link rel="shortcut icon" href="/stuff/img/Assets/Sprites/characters_enemies/finn.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <link rel="stylesheet" href="game.css">
-    <script src="/static/js/phaser.min.js"></script>
+    <script src="/stuff/js/phaser.min.js"></script>
 
     <title>Tibu-run</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <h1>Game attempt</h1>
     <script type="module">
-        import Game from '/game.js'; //antes era ./game.js
+        import Game from '/game.js'; 
 
         var config = {
             type: Phaser.AUTO,
