--- a/game.html
+++ b/game.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="game.css">
     <script src="/stuff/js/phaser.min.js"></script>
 
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  
+    <meta content="" name="descriptison">
+    <meta content="" name="keywords">
+  
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  
+    <!-- Vendor CSS Files -->
+    <link href="/stuff/template/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/stuff/template/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="/stuff/template/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="/stuff/template/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="/stuff/template/vendor/venobox/venobox.css" rel="stylesheet">
+  
+    <!-- Template Main CSS File -->
+    <link href="/stuff/template/css/style.css" rel="stylesheet">
+
+
+
     <title>Tibu-run</title>
 </head>
 
