--- a/index.html
+++ b/index.html
@@ -212,17 +212,30 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Language</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Eng</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Esp</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div class="container">
+
       <div class="copyright">
-        &copy; Cpoyright <strong><span>or</span></strong> however you write it
+        &copy; Copyright <strong><span>Shuffle</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/ -->
-        This is <a href="https://bootstrapmade.com/">where I got this whole template</a>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
