--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <main id="main">
 
-    <!-- ======= About Us Section ======= -->
+    <!-- ======= About the game Section ======= -->
     <section id="about" class="about">
       <div class="container">
 
@@ -173,9 +173,8 @@
                   <span>------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-email"></i></a>
+                  <a href=""><i class="icofont-github"></i></a>
                   <a href=""><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
@@ -191,9 +190,8 @@
                   <span>--------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-email"></i></a>
+                  <a href=""><i class="icofont-github"></i></a>
                   <a href=""><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
