--- a/game.html
+++ b/game.html
@@ -35,9 +35,10 @@
     <h1>Game attempt</h1>
     <script type="module">
         import Game from '/game.js'; 
-        //import HowToPlay from '/stuff/js/howto.js';
+        import HowToPlay from '/stuff/js/howto.js';
         import Menu from '/stuff/js/menu.js';
         import TitleScreen from '/stuff/js/titleScreen.js';
+        import CharSel from '/stuff/js/charse.js';
         var config = {
             type: Phaser.AUTO,
             width: 1400,
@@ -50,7 +51,7 @@
                 mode: Phaser.Scale.FIT,
                 autoCenter: Phaser.Scale.CENTER_BOTH
             },
-            scene: [ TitleScreen, Menu, Game ],
+            scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel],
             physics: { default: 'arcade', arcade: { gravity: { y: 0 }, debug: false } }
         };
         new Phaser.Game(config);
