--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
 
         <div class="section-title">
           <h2>About us</h2>
-          <p>Text</p>
         </div>
 
         <div class="row">
@@ -197,7 +196,9 @@
               </div>
             </div>
           </div>
-          <p>Descriptions</p>
+          <div class="section-title">
+            <p>We're a couple of bitches</p>
+          </div>
 
         </div>
 
