Jump done + tilemap

--- a/game.html
+++ b/game.html
@@ -52,7 +52,7 @@
                 autoCenter: Phaser.Scale.CENTER_BOTH
             },
             scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel],
-            physics: { default: 'arcade', arcade: { gravity: { y: 0 }, debug: false } }
+            physics: { default: 'arcade', arcade: { gravity: { y: 1000 }, debug: true } }
         };
         new Phaser.Game(config);
     </script>
