snake & powerups move

--- a/game.html
+++ b/game.html
@@ -41,6 +41,7 @@
         import TitleScreen from './stuff/js/titleScreen.js';
         import CharSel from './stuff/js/charse.js';
         import Type from './stuff/js/typing.js';
+        import PlayerInfo from './stuff/js/PlayerInfo.js';
         var config = {
             type: Phaser.AUTO,
             width: 1400,
@@ -53,7 +54,7 @@
                 mode: Phaser.Scale.FIT,
                 autoCenter: Phaser.Scale.CENTER_BOTH
             },
-            scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel, Type, Pause],
+            scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel, Type, PlayerInfo, Pause],
             physics: { default: 'arcade', arcade: { gravity: { y: 1000 }, debug: true } }
         };
         new Phaser.Game(config);
