win scene done, game almost done

--- a/game.html
+++ b/game.html
@@ -43,6 +43,7 @@
         import Type from './stuff/js/typing.js';
         import PlayerInfo from './stuff/js/PlayerInfo.js';
         import CharDeath from './stuff/js/charDeath.js';
+        import CharWin from './stuff/js/charWin.js';
         var config = {
             type: Phaser.AUTO,
             width: 1400,
@@ -55,8 +56,8 @@
                 mode: Phaser.Scale.FIT,
                 autoCenter: Phaser.Scale.CENTER_BOTH
             },
-            scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel, Type, PlayerInfo, Pause, CharDeath],
-            physics: { default: 'arcade', arcade: { gravity: { y: 1200 }, debug: true } }
+            scene: [ TitleScreen, Menu, Game, HowToPlay, CharSel, Type, PlayerInfo, Pause, CharDeath, CharWin],
+            physics: { default: 'arcade', arcade: { gravity: { y: 1200 }, debug: false } }
         };
         new Phaser.Game(config);
     </script>
