--- a/index_spa.html
+++ b/index_spa.html
@@ -42,9 +42,9 @@
             <div class="carousel-background"><img src="./stuff/img/Assets/TitleScreenAndSprites/PNG/environment/layers/back.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown"><span>An adventure</span></h2>
-                <p class="animated fadeInUp">full of excitement</p>
-                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">Play now!</a>
+                <h2 class="animated fadeInDown"><span>Una aventura</span></h2>
+                <p class="animated fadeInUp">llena de emoción</p>
+                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">¡Juega ahora!</a>
               </div>
             </div>
           </div>
@@ -54,9 +54,9 @@
             <div class="carousel-background"><img src="./stuff/img/Assets/TitleScreenAndSprites/PNG/environment/layers/back.png"alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">A battle</h2>
-                <p class="animated fadeInUp">between mammals and fish</p>
-                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">Play now!</a>
+                <h2 class="animated fadeInDown">Una batalla</h2>
+                <p class="animated fadeInUp">entre tierra y mar</p>
+                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">¡Juega ahora!</a>
               </div>
             </div>
           </div>
@@ -66,9 +66,9 @@
             <div class="carousel-background"><img src="./stuff/img/Assets/TitleScreenAndSprites/PNG/environment/layers/back.png"alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">A game</h2>
-                <p class="animated fadeInUp">to test your skills</p>
-                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">Play now!</a>
+                <h2 class="animated fadeInDown">Un juego</h2>
+                <p class="animated fadeInUp">para ponerte a prueba</p>
+                <a href="./game.html" class="btn-get-started animated fadeInUp scrollto">¡Juega ahora!</a>
               </div>
             </div>
           </div>
@@ -101,10 +101,10 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#header">Play the game!</a></li>
-          <li><a href="#about">About the game</a></li>
-          <li><a href="#team">About us</a></li>
-          <li><a href="#footer">Credits</a></li>
+          <li class="active"><a href="#header">¡Juega ahora!</a></li>
+          <li><a href="#about">Sobre el juego</a></li>
+          <li><a href="#team">Quiénes somos</a></li>
+          <li><a href="#footer">Créditos</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -153,7 +153,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About us</h2>
+          <h2>Quiénes somos</h2>
         </div>
 
         <div class="row">
@@ -192,9 +192,10 @@
             </div>
           </div>
           <div class="section-title">
-            <p>We're a couple of Computer Engineering students who study </p>
-            <p>at Madrid's UCM (universidad complutense de Madrid) creating </p>
-            <p>a game as the final project for one of our subjects!</p>
+            <p>Somos un par de estudiantes de ingeniería informática</p>
+            <p>de la Universidad Complutense de Madrid,</p>
+            <p>aquí os presentamos nuestro proyecto final para</p>
+            <p> la asignatura Diseño de Videojuegos para Tecnologías Web</p>
           </div>
 
         </div>
@@ -212,7 +213,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Language</h4>
+            <h4>Idioma</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Eng</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="index_spa.html">Esp</a></li>
@@ -231,7 +232,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
