--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3><strong></strong></h3>
             <p>
-              This will be used to explain how awesome tha game is, and the plot (will also have actualgameplay screencap or vid)
+              Have you ever wanted to be chased by a shark? Have you ever wondered what it was like to be a dog? 
+              Have you ever wanted a magic panel pop up over your head to test your typing skills?
+              If you've said yes to any of these questions, then Tibu-run is the perfect little platformer for you!
             </p>
 
             <div class="skills-content">
@@ -167,9 +169,7 @@
                   <span>------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-email"></i></a>
-                  <a href=""><i class="icofont-github"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://github.com/vsantama"><i class="icofont-github"></i></a>
                 </div>
               </div>
             </div>
@@ -184,9 +184,7 @@
                   <span>--------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-email"></i></a>
-                  <a href=""><i class="icofont-github"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://github.com/Elaphernelia"><i class="icofont-github"></i></a>
                 </div>
               </div>
             </div>
