--- a/index_spa.html
+++ b/index_spa.html
@@ -130,7 +130,10 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3><strong></strong></h3>
             <p>
-              This will be used to explain how awesome tha game is, and the plot (will also have actualgameplay screencap or vid)
+              ¿Alguna vez has querido que te persiga un tiburón? ¿Alguna vez has pensado en cómo sería ser un perro?
+              ¿Has deseado que de repente aparezca un cartel mágico sobre tu cabeza que pruebe tus habilidades de
+              mecanografía?
+              Si has respondido que sí a cualquiera de estas preguntas, Tibu-run es el perfecto minijuego para tí.
             </p>
 
             <div class="skills-content">
@@ -167,9 +170,7 @@
                   <span>------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-email"></i></a>
-                  <a href=""><i class="icofont-github"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://github.com/vsantama"><i class="icofont-github"></i></a>
                 </div>
               </div>
             </div>
@@ -184,9 +185,7 @@
                   <span>--------</span>
                 </div>
                 <div class="social">
-                  <a href=""><i class="icofont-email"></i></a>
-                  <a href=""><i class="icofont-github"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://github.com/Elaphernelia"><i class="icofont-github"></i></a>
                 </div>
               </div>
             </div>
